[package]
name = "complex"
version = "0.0.0"
description = "complex"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all", "global-shortcut", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-positioner = { git = "https://github.com/lencx/tauri-plugins-workspace", features = ["system-tray"] }
serde_json = "1.0"
log = "0.4.17"
regex = "1.7.0"
anyhow = "1.0.66"
reqwest = "0.11.13"
walkdir = "2.3.2"
dark-light = "1.0.0"
wry = "0.24.3"
tauri-plugin-log = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev", features = ["colored"] }
tauri-plugin-autostart = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev" }
lazy_static = "1.4.0"
lru = "0.10.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
window-shadows = "0.2.1"

[dependencies.uuid]
version = "1.3.3"
features = ["v4"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
